Add custom banner images.
* Stored in 'storage/app/public/projects/banners' with the SHA256
  checksum as the filename. Always stored as .jpg.

Signed-off-by: aixxe <me@aixxe.net>

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_PASSWORD=secret
 
 ELIXIR_DIRECTORY=build
 
+PROJECT_BANNERS_URL=//localhost/projects/banners/
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
