--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DB_PASSWORD=secret
 ELIXIR_DIRECTORY=build
 
 PROJECT_BANNERS_URL=//localhost/projects/banners
+PROJECT_MEDIA_URL=//localhost/projects/media
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
