Add logo related attributes to Project model.
Signed-off-by: aixxe <me@aixxe.net>

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DB_PASSWORD=secret
 
 ELIXIR_DIRECTORY=build
 
+PROJECT_LOGOS_URL=//localhost/projects/logos
 PROJECT_BANNERS_URL=//localhost/projects/banners
 PROJECT_MEDIA_URL=//localhost/projects/media
 
