Add additional columns to the users table.
* Various profile fields like those appearing on GitHub.

* Avatar filesystem added along with attributes to the User model.

Signed-off-by: aixxe <me@aixxe.net>

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_PASSWORD=secret
 
 ELIXIR_DIRECTORY=build
 
+USER_AVATARS_URL=//localhost/users/avatars
+
 PROJECT_LOGOS_URL=//localhost/projects/logos
 PROJECT_BANNERS_URL=//localhost/projects/banners
 PROJECT_MEDIA_URL=//localhost/projects/media
