Add pagination for project releases and media.
* Max items for each are configurable in .env.

Signed-off-by: aixxe <me@aixxe.net>

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ DB_PASSWORD=secret
 
 ELIXIR_DIRECTORY=build
 
+PAGINATION_MAX_PROJECTS=15
+PAGINATION_MAX_MEDIA=15
+PAGINATION_MAX_RELEASES=5
+
 USER_AVATARS_URL=//localhost/users/avatars
 
 PROJECT_LOGOS_URL=//localhost/projects/logos
