--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-ELIXIR_DIRECTORY=build
+STATIC_URL=//localhost
 
 PAGINATION_MAX_PROJECTS=15
 PAGINATION_MAX_MEDIA=15
